<resources>
    <string name="app_name">Cricket World Guru</string>
    <string name="live_line">Live Line</string>
    <string name="fixtures">Fixture</string>
    <string name="point_table">Point Table</string>
    <string name="chat">Chat</string>
    <string name="commentary">Commentary</string>
    <string name="scorecard">Scorecard</string>
    <string name="info">Info</string>
    <string name="volume">Volume</string>
    <string name="live">Live</string>
    <string name="trailing_by">Trailing by:</string>
    <string name="trailingNumber">trailingNumber</string>
    <string name="day">Day:</string>
    <string name="test_score">39/4 (18.0)</string>
    <string name="_3">3</string>
    <string name="_9">9</string>
    <string name="_256">256</string>
    <string name="extra_text_1">WI</string>
    <string name="_3_5">3.5</string>
    <string name="draw">Draw</string>
    <string name="batsman">Batsman</string>
    <string name="r">R</string>
    <string name="b">B</string>
    <string name="_4s">4s</string>
    <string name="_6s">6s</string>
    <string name="sr">SR</string>
    <string name="test_name">Alzarri Joseph</string>
    <string name="partnership">P\'ship:</string>
    <string name="_5_28">5(28)</string>
    <string name="last_wkt">L\'Wkt:</string>
    <string name="test_wicket">Chase 10(24)</string>
    <string name="bowler">Bowler</string>
    <string name="last_balls">Last 6 Balls:</string>
    <string name="thank_you_text">Thank you for using Cricket Guru App</string>
    <string name="extra_test">SLC Invitational T20 League, Final Match</string>
    <string name="extra_time">07:00 PM 24-Aug</string>
    <string name="status">Status</string>
    <string name="vs">VS</string>
    <string name="team_second">Team Second</string>
    <string name="team_first">Team First</string>
    <string name="day_4_stumps">Day 4: Stumps</string>
    <string name="extras"><b>Extras:</b></string>
    <string name="bowling">Bowling</string>
    <string name="fow">Fall of Wickets</string>
    <string name="score">Score</string>
    <string name="over">Over</string>
    <string name="over_Colon">Over:</string>
    <string name="there_is_no_scorecard">There is no ScoreCard</string>
    <string name="there_are_no_squads">There are no Squads</string>
    <string name="favourite">Favourite</string>
    <string name="mute">Mute</string>
    <string name="bet">Betting</string>
    <string name="session">Session</string>
    <string name="open">Open</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="done">Done</string>
    <string name="no_history_session">No Session History</string>
    <string name="history">History</string>
    <string name="match_calculator">Match Calculator</string>
    <string name="session_calculator">Session Calculator</string>
    <string name="party_info">Summary</string>
    <string name="ActiveMatch">Khai Lagai</string>
    <string name="there_is_no_match_found">There is no Match Found</string>
    <string name="there_is_no_session_found">There is no Session Found</string>
    <string name="there_is_no_partyInfo_found">There is no Party Info Found</string>
    <string name="there_is_no_history_match_found">There is no History Match Found</string>
    <string name="CurrentSession">Session</string>
    <string name="add_team_name">Add Team Name</string>
    <string name="team_1">Team -1</string>
    <string name="team_2">Team -2</string>
    <string name="match_type">Match Type</string>
    <string name="odi_t_20">ODI/T-20</string>
    <string name="test">Test</string>
    <string name="commission">Commission</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_session">Add New Session</string>
    <string name="team_name">Team Name</string>
    <string name="session_name">Session Name</string>
    <string name="party_name">Party Name</string>
    <string name="party_detail">Party Detail</string>
    <string name="odi_t_20_commission">ODI/T-20 \nCommission</string>
    <string name="test_commission">Test \nCommission</string>
    <string name="Session_commission">Session \nCommission</string>
    <string name="take">Take</string>
    <string name="give">Give</string>
    <string name="_0_0">0.0</string>
    <string name="play">Play</string>
    <string name="rate">Rate:</string>
    <string name="rate_hint">Rate(ps) * Rs 1.2 Rs = 120 ps</string>
    <string name="amount">Amount:</string>
    <string name="innings">Innings:</string>
    <string name="amount_hint">Amount</string>
    <string name="inning_hint">Innings</string>
    <string name="khai_or_lagai">Khai or Lagai:</string>
    <string name="Khai">Khai</string>
    <string name="Lagai">Lagai</string>
    <string name="which_team">Which Team:</string>
    <string name="default_text">Default</string>
    <string name="player_name_hint">Player Name</string>
    <string name="player_name">Player Name:</string>
    <string name="over_hint">over_hint</string>
    <string name="fancy_prediction">FANCY / Prediction:</string>
    <string name="prediction_score">Predicted Score</string>
    <string name="actual_score">Actual Score:</string>
    <string name="actual_score_hint">Actual Score</string>
    <string name="_1">1</string>
    <string name="not">Not</string>
    <string name="banner_ad">Banner Ad</string>
    <string name="full_ad">Full Ad</string>
    <string name="party">Party Name:</string>
    <string name="party_hint">Party</string>
    <string name="run">Run =</string>
    <string name="delete">Delete</string>
    <string name="SessionEntry">Session Entry</string>
    <string name="CheckGraph">Check Graph</string>
    <string name="total">Total</string>
    <string name="f_c_r">For Current Record</string>
    <string name="no_session_entry_available">No Session Entry Available</string>
    <string name="declare">Declare</string>
    <string name="venue">Venue</string>
    <string name="series">Series</string>
    <string name="match">Match</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="toss">Toss</string>
    <string name="avg_1st_innings">Avg 1st Innings</string>
    <string name="avg_2nd_innings">Avg 2nd Innings</string>
    <string name="highest_total">Highest Total</string>
    <string name="lowest_total">Lowest Total</string>
    <string name="highest_chased">Highest Chased</string>
    <string name="lowest_defended">Lowest Defended</string>
    <string name="head_to_head">Head to Head</string>
    <string name="team_form">Team Form</string>
    <string name="umpire">Umpire</string>
    <string name="third_umpire">Third Umpire</string>
    <string name="man_of_the_match">Man of the Match</string>
    <string name="refree">Refree</string>
    <string name="dash">-</string>
    <string name="select_winner_team">Select Winner Team</string>
    <string name="declare_session">Declare Session</string>
    <string name="enter_final_run">Enter Final Run</string>
    <string name="final_amount">Final Amount</string>
    <string name="please_enter_run">Please Enter Run</string>
    <string name="alert_insert_run_session_soda">Please Enter Run</string>
    <string name="ok">OK</string>
    <string name="undo">Undo</string>
    <string name="insert_session_declare">Session Declared Successfully.</string>
    <string name="text_error_internal_server">Internal server error. Please retry!!!</string>
    <string name="text_error_timeout">Sorry, We lost you. Please retry!!!</string>
    <string name="text_error_connection">Look a like we lost you for a moment. Please retry!!!</string>
    <string name="text_error_network">No Internet connection!!!</string>
    <string name="no_session_found">No Session Found</string>
    <string name="match_history">Match History</string>
    <string name="match_histroy_not_found">Match Histroy Not Found</string>
    <string name="session_histroy_not_found">Session History not Found</string>
    <string name="upcoming">Upcoming</string>
    <string name="recent">Recent</string>
    <string name="more">More</string>
    <string name="calculator">Calculator</string>
    <string name="home">Home</string>
    <string name="there_is_no_upcoming_matches">There is no Upcoming Matches.</string>
    <string name="default_notification_channel_id">all</string>
    <string name="there_is_no_recent_matches">There is no Recent Matches.</string>
    <string name="there_is_no_live_matches">There is no Live Matches.</string>
    <string name="report">Report</string>
    <string name="hawala">Hawala</string>
    <string name="addparty">Add Party</string>
    <string name="install_whats_app_msg">Please install WhatsApp Messenger in your Devices to Contact with us.</string>
    <string name="small_ads">Small Banner Ads</string>
    <string name="eco">Eco</string>
    <string name="w">W</string>
    <string name="m">M</string>
    <string name="o">O</string>
    <string name="trending_series">Trending Series</string>
    <string name="view_more">View More</string>
    <string name="team_image">Team Image</string>

    <string name="teams">Teams</string>
    <string name="nrr">NRR</string>
    <string name="nr">NR</string>
    <string name="pts">Pts</string>
    <string name="l">L</string>
    <string name="p">P</string>
    <string name="there_is_no_point_table_available">There is No Point Table Available</string>
    <string name="there_are_no_fixtures_available">There are no Fixtures Available</string>
    <string name="there_are_no_series_available">There are no Series Available</string>
    <string name="back">back</string>
    <string name="alert_title_need_permission">Permission Needed</string>
    <string name="alert_title_permission_settings">Open Settings to Grant Permission.</string>
</resources>