<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/purple_200"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    app:cardCornerRadius="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:weightSum="6">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/montserrat_medium"
            android:includeFontPadding="false"
            android:text="@string/teams"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/p"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/w"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:fontFamily="@font/montserrat_medium"
            android:includeFontPadding="false"
            android:gravity="center"
            android:text="@string/l"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:fontFamily="@font/montserrat_medium"
            android:includeFontPadding="false"
            android:gravity="center"
            android:text="@string/nr"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:includeFontPadding="false"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="end"
            android:text="@string/pts"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="end"
            android:text="@string/nrr"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>