<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".5"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/favourite"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/tv_fav_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="@dimen/_12ssp"
            android:autoSizeMinTextSize="@dimen/_10ssp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:fontFamily="@font/montserrat_regular"
            android:textStyle="bold"
            android:includeFontPadding="false"
            tools:text="@string/team_first"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_rate1"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/tv_rate1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/round_rect"
            android:backgroundTint="@android:color/holo_green_dark"
            android:fontFamily="@font/montserrat_regular"
            android:includeFontPadding="false"
            android:gravity="center"
            android:padding="5dp"
            tools:text="@string/_3_5"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_rate2"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/tv_rate2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/round_rect"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:padding="5dp"
            android:includeFontPadding="false"
            tools:text="@string/_3_5"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>